<resources>
    <string name="app_name">My Application</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="vhod">Вход</string>
    <string name="registr">Регистрация</string>
    <string name="user">Пользователь</string>
    <string name="working">Уход/Работа</string>
    <string name="prederzhka">Передержка</string>
    <string name="vetklinnika">Ветклинника</string>
    <string name="priut">Приют</string>

    <string name="slogan">Travel together!</string>

    <string name="signup">SignUp</string>
    <string name="logo">Search&amp;Travel</string>
    <string name="name">Никнейм</string>
    <string name="phone">Телефон</string>
    <string name="email">Email</string>

    <string name="confPassword">Подтвердите пароль</string>
    <string name="age">Возраст</string>
    <string name="logTxt">Ваш логин</string>
    <string name="forgotPass">Reset email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>