<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@mipmap/logo"
            android:layout_gravity="center"
            android:layout_marginTop="100dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="32dp"
        android:gravity="bottom"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:textColor="#1a1c20"
            android:background="#cf7500"
            android:id="@+id/user_btn"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="#1a1c20"
            android:background="#cf7500"
            android:id="@+id/work_btn"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/working"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            />
        <androidx.appcompat.widget.AppCompatButton

            android:textColor="#1a1c20"
            android:background="#cf7500"
            android:id="@+id/pered_btn"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prederzhka"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:visibility="gone"
            android:textColor="#1a1c20"
            android:background="#cf7500"
            android:id="@+id/priut_btn"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priut"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:visibility="gone"
            android:textColor="#1a1c20"
            android:background="#cf7500"
            android:id="@+id/klinnika_btn"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vetklinnika"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Уже есть аккаунт?" />

            <TextView
                android:textColor="@color/slogan_txt"
                android:id="@+id/loginNowBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Войти"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>